--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1"
+        "react-scripts": "5.0.1",
+        "react-tsparticles": "^2.6.0",
+        "tsparticles": "^2.6.0"
     },
     "scripts": {
         "start": "react-scripts start",
