--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "portfolio",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://chemokita13.github.io",
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.2.1",
         "@fortawesome/free-regular-svg-icons": "^6.2.1",
@@ -16,6 +17,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
+        "deploy": "gh-pages -b master -d build",
         "build": "react-scripts build",
         "eject": "react-scripts eject"
     },
@@ -36,5 +38,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gh-pages": "^4.0.0"
     }
 }
