--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "react-reveal": "^1.2.2",
         "react-scripts": "5.0.1",
         "react-tsparticles": "^2.6.0",
-        "tsparticles": "^2.6.0"
+        "tsparticles": "^2.6.0",
+        "web-vitals": "^3.1.0"
     },
     "scripts": {
         "start": "react-scripts start",
