--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@vercel/analytics": "^0.1.6",
+        "axios": "^1.2.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-reveal": "^1.2.2",
